--- a/k8s/deployment-web.yaml
+++ b/k8s/deployment-web.yaml
@@ -17,27 +17,17 @@ spec:
       labels:
         app.kubernetes.io/name: kaiwa
         app.kubernetes.io/component: web
-      annotations:
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "kaiwa"
-        vault.hashicorp.com/agent-inject-secret-config: "secret/kaiwa/config"
-        vault.hashicorp.com/agent-inject-template-config: |
-          {{- with secret "secret/kaiwa/config" -}}
-          {{- range $k, $v := .Data.data }}
-          export {{ $k }}={{ $v }}
-          {{- end }}
-          {{- end }}
     spec:
-      serviceAccountName: kaiwa
       containers:
         - name: web
           image: kaiwa:latest
-          command: ["/bin/sh", "-c"]
-          args: [". /vault/secrets/config && npm start"]
           ports:
             - name: http
               containerPort: 3000
               protocol: TCP
+          envFrom:
+            - secretRef:
+                name: kaiwa-config
           env:
             - name: NODE_ENV
               value: "production"
