--- a/k8s/deployment-worker.yaml
+++ b/k8s/deployment-worker.yaml
@@ -17,23 +17,14 @@ spec:
       labels:
         app.kubernetes.io/name: kaiwa
         app.kubernetes.io/component: worker
-      annotations:
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "kaiwa"
-        vault.hashicorp.com/agent-inject-secret-config: "secret/kaiwa/config"
-        vault.hashicorp.com/agent-inject-template-config: |
-          {{- with secret "secret/kaiwa/config" -}}
-          {{- range $k, $v := .Data.data }}
-          export {{ $k }}={{ $v }}
-          {{- end }}
-          {{- end }}
     spec:
-      serviceAccountName: kaiwa
       containers:
         - name: worker
           image: kaiwa:latest
-          command: ["/bin/sh", "-c"]
-          args: [". /vault/secrets/config && npx tsx src/worker/index.ts"]
+          command: ["npx", "tsx", "src/worker/index.ts"]
+          envFrom:
+            - secretRef:
+                name: kaiwa-config
           env:
             - name: NODE_ENV
               value: "production"
