CI/CD pipeline: Dockerfile combined stage, kustomize restructure, ArgoCD app
Add combined production Dockerfile stage for single-image Kaniko builds.
Restructure k8s/ into kustomize base/overlays, add Harbor pull secret
ExternalSecret, and ArgoCD Application with automated sync.

--- a/k8s/base/deployment-web.yaml
+++ b/k8s/base/deployment-web.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kaiwa-web
-  namespace: kaiwa
   labels:
     app.kubernetes.io/name: kaiwa
     app.kubernetes.io/component: web
@@ -18,9 +17,11 @@ spec:
         app.kubernetes.io/name: kaiwa
         app.kubernetes.io/component: web
     spec:
+      imagePullSecrets:
+        - name: harbor-registry
       containers:
         - name: web
-          image: kaiwa:latest
+          image: harbor.gnzaga.com/apps/kaiwa:latest
           ports:
             - name: http
               containerPort: 3000
