Fix Harbor pull secret: add auth field and use robot account

--- a/k8s/base/externalsecret-harbor.yaml
+++ b/k8s/base/externalsecret-harbor.yaml
@@ -14,7 +14,7 @@ spec:
       type: kubernetes.io/dockerconfigjson
       data:
         .dockerconfigjson: |
-          {"auths":{"harbor.gnzaga.com":{"username":"{{ .harbor_username }}","password":"{{ .harbor_password }}"}}}
+          {"auths":{"harbor.gnzaga.com":{"username":"{{ .harbor_username }}","password":"{{ .harbor_password }}","auth":"{{ printf "%s:%s" .harbor_username .harbor_password | b64enc }}"}}}
   data:
     - secretKey: harbor_username
       remoteRef:
