--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: kaiwa
     app.kubernetes.io/component: web
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: http
