--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ AUTHENTIK_CLIENT_SECRET=your-authentik-client-secret
 POLL_INTERVAL_MINUTES=15
 TRANSLATION_CONCURRENCY=3
 SUMMARIZATION_CONCURRENCY=2
+SCRAPE_ENABLED=true
+SCRAPE_TIMEOUT_MS=15000
+SCRAPE_CONCURRENCY=2
