Multi-national expansion: regions, categories, per-region queues, images, Apple News UI
- Add regions (JP, US, PH, TW) and categories tables with seed data
- Per-region pg-boss queues for parallel scrape/translate/summarize pipelines
- Multi-language translation with English passthrough for en-source feeds
- MinIO S3 image storage with extraction from og:image, Readability, enclosures
- Region-aware summarization prompts with expanded sentiment values
- New /api/regions endpoint, region filtering on articles/search/stats/feeds APIs
- Region-first navigation: collapsible sidebar, mobile nav with regions sheet
- Dynamic routes: /region/[regionId] and /region/[regionId]/[categorySlug]
- Apple News-style ArticleCard with hero/default/compact variants
- ExternalSecret updated with MinIO + scrape config keys
- Remove hardcoded law/economics pages and category enum

--- a/k8s/base/external-secret.yaml
+++ b/k8s/base/external-secret.yaml
@@ -71,3 +71,31 @@ spec:
       remoteRef:
         key: kaiwa
         property: SUMMARIZATION_CONCURRENCY
+    - secretKey: SCRAPE_CONCURRENCY
+      remoteRef:
+        key: kaiwa
+        property: SCRAPE_CONCURRENCY
+    - secretKey: SCRAPE_ENABLED
+      remoteRef:
+        key: kaiwa
+        property: SCRAPE_ENABLED
+    - secretKey: MINIO_ENDPOINT
+      remoteRef:
+        key: kaiwa
+        property: MINIO_ENDPOINT
+    - secretKey: MINIO_ACCESS_KEY
+      remoteRef:
+        key: kaiwa
+        property: MINIO_ACCESS_KEY
+    - secretKey: MINIO_SECRET_KEY
+      remoteRef:
+        key: kaiwa
+        property: MINIO_SECRET_KEY
+    - secretKey: MINIO_BUCKET
+      remoteRef:
+        key: kaiwa
+        property: MINIO_BUCKET
+    - secretKey: MINIO_PUBLIC_URL
+      remoteRef:
+        key: kaiwa
+        property: MINIO_PUBLIC_URL
