--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "worker": "tsx --env-file=.env.local src/worker/index.ts"
+    "worker": "tsx --env-file=.env.local src/worker/index.ts",
+    "db:seed": "tsx --env-file=.env.local src/db/seed.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
+    "@aws-sdk/client-s3": "^3.991.0",
     "@mozilla/readability": "^0.6.0",
     "@tanstack/react-query": "^5.90.21",
     "drizzle-orm": "^0.45.1",
