--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ SUMMARIZATION_CONCURRENCY=2
 SCRAPE_ENABLED=true
 SCRAPE_TIMEOUT_MS=15000
 SCRAPE_CONCURRENCY=2
+MINIO_ENDPOINT=http://10.100.0.228:9000
+MINIO_ACCESS_KEY=your-minio-access-key
+MINIO_SECRET_KEY=your-minio-secret-key
+MINIO_BUCKET=kaiwa-images
+MINIO_PUBLIC_URL=http://10.100.0.228:9000/kaiwa-images
