--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: kaiwa
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/auth-url: https://auth.homelab.local/outpost.goauthentik.io/auth/nginx
-    nginx.ingress.kubernetes.io/auth-signin: https://auth.homelab.local/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
+    nginx.ingress.kubernetes.io/auth-url: https://auth.gnzaga.com/outpost.goauthentik.io/auth/nginx
+    nginx.ingress.kubernetes.io/auth-signin: https://auth.gnzaga.com/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
     nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_set_header X-Forwarded-Host $http_host;
@@ -15,10 +15,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - kaiwa.homelab.local
+        - kaiwa.gnzaga.com
       secretName: kaiwa-tls
   rules:
-    - host: kaiwa.homelab.local
+    - host: kaiwa.gnzaga.com
       http:
         paths:
           - path: /
