Move OPENWEBUI_MODEL from Vault/ExternalSecret to deployment env vars
Model name isn't sensitive - making it a plain env var in the deployment
manifests allows changing it directly from ArgoCD without touching Vault.
Switched from Claude Sonnet 4.5 to DeepSeek V3.2 (~40x cheaper).

--- a/k8s/base/deployment-worker.yaml
+++ b/k8s/base/deployment-worker.yaml
@@ -29,6 +29,8 @@ spec:
           env:
             - name: NODE_ENV
               value: "production"
+            - name: OPENWEBUI_MODEL
+              value: "openrouter_integration_for_openwebui.deepseek/deepseek-v3.2"
           resources:
             requests:
               memory: "256Mi"
