Add NEXTAUTH_URL to ExternalSecret; add server-side admin layout guard

--- a/k8s/base/external-secret.yaml
+++ b/k8s/base/external-secret.yaml
@@ -95,3 +95,7 @@ spec:
       remoteRef:
         key: kaiwa
         property: MINIO_PUBLIC_URL
+    - secretKey: NEXTAUTH_URL
+      remoteRef:
+        key: kaiwa
+        property: NEXTAUTH_URL
