Fix auth redirect loop: bypass Authentik forward-auth for /api/auth
Authentik forward-auth on the ingress was intercepting NextAuth's own
OIDC callback (/api/auth/callback/authentik), causing a redirect loop.
Add a second ingress with no auth annotations for /api/auth/* so NextAuth
can complete its own OAuth flow unimpeded.

--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - deployment-worker.yaml
   - service.yaml
   - ingress.yaml
+  - ingress-auth-bypass.yaml
   - external-secret.yaml
   - externalsecret-harbor.yaml
   - pvc-db.yaml
