Migrate LLM from OpenWebUI proxy to OpenRouter direct
Removes OpenWebUI as an intermediary — all LLM calls (summarization +
translation fallback) now go directly to OpenRouter API. Switches default
model to google/gemini-2.0-flash-001 (~2.5x cheaper on input tokens).

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,8 @@ MINIFLUX_API_URL=http://miniflux.default.svc.cluster.local
 MINIFLUX_API_KEY=your-miniflux-api-key
 LIBRETRANSLATE_URL=http://libretranslate.libretranslate.svc.cluster.local:5000
 LIBRETRANSLATE_TIMEOUT_MS=30000
-OPENWEBUI_URL=http://openwebui.default.svc.cluster.local
-OPENWEBUI_API_KEY=your-openwebui-api-key
-OPENWEBUI_MODEL=your-model-name
+OPENROUTER_API_KEY=your-openrouter-api-key
+OPENROUTER_MODEL=google/gemini-2.0-flash-001
 NEXTAUTH_SECRET=generate-a-random-secret
 NEXTAUTH_URL=http://localhost:3000
 AUTHENTIK_ISSUER=https://auth.example.com/application/o/kaiwa/
