--- a/k8s/base/external-secret.yaml
+++ b/k8s/base/external-secret.yaml
@@ -27,14 +27,14 @@ spec:
       remoteRef:
         key: kaiwa
         property: LIBRETRANSLATE_TIMEOUT_MS
-    - secretKey: OPENWEBUI_URL
+    - secretKey: OPENROUTER_API_KEY
       remoteRef:
         key: kaiwa
-        property: OPENWEBUI_URL
-    - secretKey: OPENWEBUI_API_KEY
+        property: OPENROUTER_API_KEY
+    - secretKey: OPENROUTER_MODEL
       remoteRef:
         key: kaiwa
-        property: OPENWEBUI_API_KEY
+        property: OPENROUTER_MODEL
     - secretKey: DATABASE_URL
       remoteRef:
         key: kaiwa
