Switch default model to deepseek/deepseek-v3.2 and optimize Dockerfile
Gemini 2.0 Flash was delisted from OpenRouter; DeepSeek V3.2 is cheaper
($0.26/$0.38 per M tokens vs Gemini 3 Flash at $0.50/$3.00). Also
consolidates Dockerfile from 3 npm ci calls down to 1.

--- a/k8s/base/deployment-web.yaml
+++ b/k8s/base/deployment-web.yaml
@@ -33,7 +33,7 @@ spec:
             - name: NODE_ENV
               value: "production"
             - name: OPENROUTER_MODEL
-              value: "google/gemini-2.0-flash-001"
+              value: "deepseek/deepseek-v3.2"
           resources:
             requests:
               memory: "256Mi"
