--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ MINIFLUX_API_KEY=your-miniflux-api-key
 LIBRETRANSLATE_URL=http://libretranslate.libretranslate.svc.cluster.local:5000
 LIBRETRANSLATE_TIMEOUT_MS=30000
 OPENROUTER_API_KEY=your-openrouter-api-key
-OPENROUTER_MODEL=google/gemini-2.0-flash-001
+OPENROUTER_MODEL=deepseek/deepseek-v3.2
 NEXTAUTH_SECRET=generate-a-random-secret
 NEXTAUTH_URL=http://localhost:3000
 AUTHENTIK_ISSUER=https://auth.example.com/application/o/kaiwa/
