--- a/k8s/base/deployment-worker.yaml
+++ b/k8s/base/deployment-worker.yaml
@@ -30,7 +30,7 @@ spec:
             - name: NODE_ENV
               value: "production"
             - name: OPENROUTER_MODEL
-              value: "google/gemini-2.0-flash-001"
+              value: "deepseek/deepseek-v3.2"
           resources:
             requests:
               memory: "256Mi"
