Switch LLM model to qwen/qwen3-14b
77% cheaper on input, 37% cheaper on output vs DeepSeek V3.2 while
maintaining strong CJK translation quality (Alibaba's Qwen3 family).

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ MINIFLUX_API_KEY=your-miniflux-api-key
 LIBRETRANSLATE_URL=http://libretranslate.libretranslate.svc.cluster.local:5000
 LIBRETRANSLATE_TIMEOUT_MS=30000
 OPENROUTER_API_KEY=your-openrouter-api-key
-OPENROUTER_MODEL=deepseek/deepseek-v3.2
+OPENROUTER_MODEL=qwen/qwen3-14b
 NEXTAUTH_SECRET=generate-a-random-secret
 NEXTAUTH_URL=http://localhost:3000
 AUTHENTIK_ISSUER=https://auth.example.com/application/o/kaiwa/
