Add RAG semantic search with pgvector + embedder microservice
- Embedder: FastAPI microservice using all-MiniLM-L6-v2 (384-dim)
- Pipeline: sync → scrape → translate → summarize → embed
- Search: keyword, semantic, and hybrid (RRF) modes
- K8s: embedder deployment + service, external-secret for EMBEDDER_URL
- Frontend: search mode toggle (Keyword/Hybrid/Semantic)
- Migration + backfill scripts for pgvector

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,4 @@ MINIO_ACCESS_KEY=your-minio-access-key
 MINIO_SECRET_KEY=your-minio-secret-key
 MINIO_BUCKET=kaiwa-images
 MINIO_PUBLIC_URL=http://10.100.0.228:9000/kaiwa-images
+EMBEDDER_URL=http://localhost:8000
