--- a/k8s/base/external-secret.yaml
+++ b/k8s/base/external-secret.yaml
@@ -99,3 +99,7 @@ spec:
       remoteRef:
         key: kaiwa
         property: NEXTAUTH_URL
+    - secretKey: EMBEDDER_URL
+      remoteRef:
+        key: kaiwa
+        property: EMBEDDER_URL
