restricted recently read count

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ MINIO_PUBLIC_URL=http://10.100.0.228:9000/kaiwa-images
 EMBEDDER_URL=http://localhost:8000
 RESEARCHER_URL=http://localhost:8001
 RESEARCH_MODEL=deepseek/deepseek-v3.2
+SEARXNG_URL=http://localhost:8888
+WEBREADER_URL=http://localhost:8002
+WEB_SEARCH_ENABLED=true
