--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -10,3 +10,5 @@ images:
     newTag: latest
   - name: harbor.gnzaga.com/apps/kaiwa-researcher
     newTag: latest
+  - name: harbor.gnzaga.com/apps/kaiwa-webreader
+    newTag: latest
