--- a/k8s/base/deployment-webreader.yaml
+++ b/k8s/base/deployment-webreader.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kaiwa-researcher
+  name: kaiwa-webreader
   labels:
     app.kubernetes.io/name: kaiwa
-    app.kubernetes.io/component: researcher
+    app.kubernetes.io/component: webreader
 spec:
   replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: kaiwa
-      app.kubernetes.io/component: researcher
+      app.kubernetes.io/component: webreader
   template:
     metadata:
       labels:
         app.kubernetes.io/name: kaiwa
-        app.kubernetes.io/component: researcher
+        app.kubernetes.io/component: webreader
     spec:
       imagePullSecrets:
         - name: harbor-registry
       containers:
-        - name: researcher
-          image: harbor.gnzaga.com/apps/kaiwa-researcher:latest
+        - name: webreader
+          image: harbor.gnzaga.com/apps/kaiwa-webreader:latest
           ports:
             - name: http
               containerPort: 8000
@@ -29,27 +29,18 @@ spec:
           envFrom:
             - secretRef:
                 name: kaiwa-config
-          env:
-            - name: EMBEDDER_URL
-              value: http://kaiwa-embedder
-            - name: SEARXNG_URL
-              value: http://kaiwa-searxng
-            - name: WEBREADER_URL
-              value: http://kaiwa-webreader
-            - name: WEB_SEARCH_ENABLED
-              value: "true"
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "100m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
           livenessProbe:
             httpGet:
               path: /health
               port: http
-            initialDelaySeconds: 10
+            initialDelaySeconds: 15
             periodSeconds: 30
             timeoutSeconds: 5
             failureThreshold: 3
@@ -57,7 +48,7 @@ spec:
             httpGet:
               path: /health
               port: http
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             failureThreshold: 3
